--- a/package.json
+++ b/package.json
@@ -3,13 +3,30 @@
   "version": "1.0.0",
   "description": "MERN shopping cart app",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node backend/app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon backend/app",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
+    "data:import": "node backend/seeder",
+    "data:destroy": "node backend/seeder -d"
   },
   "author": "Maksym Kabak",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.11"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.10.3",
+    "@types/express": "^4.17.11",
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.7"
   }
 }
